--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -1,1 +1,167 @@
-<p>board works!</p>
+<mat-drawer-container class="mat-drawer-container" autosize>
+    <mat-drawer #drawer class="board-sidenav" mode="over" [opened]="false">
+      <div class="logo-container">B² TICKETEER</div>
+  
+      <ul class="menu-items">
+        <li [routerLink]="['/']"><mat-icon>dashboard</mat-icon>Board</li>
+        <li [routerLink]="['/']"><mat-icon>settings</mat-icon>Settings</li>
+      </ul>
+  
+    </mat-drawer>
+  
+    <div>
+  
+      <mat-toolbar color="primary">
+        <mat-toolbar-row>
+            <div class="flex-c-c">
+                <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                <span class="mr-l-16">TICKETEER</span>
+            </div>
+            <span>B²</span>
+        </mat-toolbar-row>
+      </mat-toolbar>  
+  
+    </div>
+
+    <div class="board-wrapper">
+        <div class="board-wrapper-col">
+
+
+            <div class="board-card-wrapper">
+                <div class="flex-btw-c">
+                    <div class="board-col-headline">Urgent</div>
+                    <div>
+                        <mat-icon class="board-col-icons">add</mat-icon>
+                        <mat-icon class="board-col-icons">more_horiz</mat-icon>
+                    </div>
+                </div>
+                <div class="board-card-wrapper-empty mr-t-24">
+                    <div class="flex-c-c">
+                            <mat-icon class="board-col-icons">add</mat-icon>
+                            <div>Add Task</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="board-card-wrapper">
+                <div class="flex-btw-c">
+                    <div class="board-col-headline">To-do</div>
+                    <div>
+                        <mat-icon class="board-col-icons">add</mat-icon>
+                        <mat-icon class="board-col-icons">more_horiz</mat-icon>
+                    </div>
+                </div>
+                <div>
+                    <mat-card class="board-card">
+                        <mat-card-header>
+                            <mat-card-title>Shiba Inu</mat-card-title>
+                            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <p>This card indeterminates progress bar.</p>
+                            <p class="board-card-date">28 August</p>
+                        </mat-card-content>
+                        <mat-card-actions class="board-col-tools">
+                            <mat-icon class="board-col-icons">edit</mat-icon>
+                            <mat-icon class="board-col-icons">delete</mat-icon>
+                        </mat-card-actions>
+                    </mat-card>
+                    <div class="flex-c-c mr-t-24"><mat-icon class="board-col-icons">add</mat-icon>Add Task</div>
+                </div>
+            </div>
+
+
+            <div class="board-card-wrapper">
+                <div class="flex-btw-c">
+                    <div class="board-col-headline">In Progress</div>
+                    <div>
+                        <mat-icon class="board-col-icons">add</mat-icon>
+                        <mat-icon class="board-col-icons">more_horiz</mat-icon>
+                    </div>
+                </div>
+                <div>
+                    <mat-card class="board-card">
+                        <mat-card-header>
+                            <mat-card-title>Shiba Inu</mat-card-title>
+                            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <p>This card indeterminates progress bar.</p>
+                            <p class="board-card-date">-</p>
+                        </mat-card-content>
+                        <mat-card-actions class="board-col-tools">
+                            <mat-icon class="board-col-icons">edit</mat-icon>
+                            <mat-icon class="board-col-icons">delete</mat-icon>
+                        </mat-card-actions>
+                    </mat-card>
+                    <div class="flex-c-c mr-t-24"><mat-icon class="board-col-icons">add</mat-icon>Add Task</div>
+                </div>
+            </div>
+
+
+            <div class="board-card-wrapper">
+                <div class="flex-btw-c">
+                    <div class="board-col-headline">Done</div>
+                    <div>
+                        <mat-icon class="board-col-icons">add</mat-icon>
+                        <mat-icon class="board-col-icons">more_horiz</mat-icon>
+                    </div>
+                </div>
+                <div>
+                    <mat-card class="board-card">
+                        <mat-card-header>
+                            <mat-card-title>Shiba Inu</mat-card-title>
+                            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <p>This card indeterminates progress bar.</p>
+                            <p class="board-card-date">22 Januar</p>
+                        </mat-card-content>
+                        <mat-card-actions class="board-col-tools">
+                            <mat-icon class="board-col-icons">edit</mat-icon>
+                            <mat-icon class="board-col-icons">delete</mat-icon>
+                        </mat-card-actions>
+                    </mat-card>
+                    <div class="flex-c-c mr-t-24"><mat-icon class="board-col-icons">add</mat-icon>Add Task</div>
+                </div>
+            </div>
+
+
+            <div class="example-container">
+                <h2>To do</h2>
+              
+                <div
+                  cdkDropList
+                  #todoList="cdkDropList"
+                  [cdkDropListData]="todo"
+                  [cdkDropListConnectedTo]="[doneList]"
+                  class="example-list"
+                  (cdkDropListDropped)="drop($event)">
+                  @for (item of todo; track item) {
+                    <div class="example-box" cdkDrag>{{item}}</div>
+                  }
+                </div>
+              </div>
+              
+              <div class="example-container">
+                <h2>Done</h2>
+              
+                <div
+                  cdkDropList
+                  #doneList="cdkDropList"
+                  [cdkDropListData]="done"
+                  [cdkDropListConnectedTo]="[todoList]"
+                  class="example-list"
+                  (cdkDropListDropped)="drop($event)">
+                  @for (item of done; track item) {
+                    <div class="example-box" cdkDrag>{{item}}</div>
+                  }
+                </div>
+              </div>
+
+
+        </div>
+    </div>
+  
+  </mat-drawer-container>
