--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -1,167 +1,192 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
     <mat-drawer #drawer class="board-sidenav" mode="over" [opened]="false">
-      <div class="logo-container">B² TICKETEER</div>
-  
-      <ul class="menu-items">
-        <li [routerLink]="['/']"><mat-icon>dashboard</mat-icon>Board</li>
-        <li [routerLink]="['/']"><mat-icon>settings</mat-icon>Settings</li>
-      </ul>
-  
+        <div class="logo-container">B² TICKETEER</div>
+
+        <ul class="menu-items">
+            <li [routerLink]="['/']"><mat-icon>dashboard</mat-icon>Board</li>
+            <li [routerLink]="['/']"><mat-icon>settings</mat-icon>Settings</li>
+        </ul>
+
     </mat-drawer>
-  
+
     <div>
-  
-      <mat-toolbar color="primary">
-        <mat-toolbar-row>
-            <div class="flex-c-c">
-                <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-                <span class="mr-l-16">TICKETEER</span>
-            </div>
-            <span>B²</span>
-        </mat-toolbar-row>
-      </mat-toolbar>  
-  
+
+        <mat-toolbar color="primary">
+            <mat-toolbar-row>
+                <div class="flex-c-c">
+                    <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+                    <span class="mr-l-16">TICKETEER</span>
+                </div>
+                <span>B²</span>
+            </mat-toolbar-row>
+        </mat-toolbar>
+
     </div>
 
     <div class="board-wrapper">
         <div class="board-wrapper-col">
 
-
+            <!-- URGENT START-->
             <div class="board-card-wrapper">
                 <div class="flex-btw-c">
-                    <div class="board-col-headline">Urgent</div>
-                    <div>
+                    <div class="board-col-headline pad-l-24">Urgent</div>
+                    <div class="pad-r-24">
                         <mat-icon class="board-col-icons">add</mat-icon>
                         <mat-icon class="board-col-icons">more_horiz</mat-icon>
                     </div>
                 </div>
-                <div class="board-card-wrapper-empty mr-t-24">
-                    <div class="flex-c-c">
+
+                <div class="board-col-overflow">
+                    <div [ngClass]="{'board-card-wrapper-empty': urgent.length === 0}" cdkDropList
+                        #urgentList="cdkDropList" [cdkDropListData]="urgent"
+                        [cdkDropListConnectedTo]="[todoList, inProgressList, doneList]"
+                        (cdkDropListDropped)="drop($event)">
+                        <div class="flex-c-c" *ngIf="urgent.length === 0">
                             <mat-icon class="board-col-icons">add</mat-icon>
                             <div>Add Task</div>
+                        </div>
+                        <div class="board-media-row">
+                            <div *ngFor="let item of urgent" cdkDrag>
+                                <mat-card class="board-card" cdkDragPreview>
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.subtitle}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-content>
+                                        <p>{{item.content}}</p>
+                                        <p class="board-card-date">{{item.date}}</p>
+                                    </mat-card-content>
+                                    <mat-card-actions class="board-col-tools">
+                                        <mat-icon class="board-col-icons">edit</mat-icon>
+                                        <mat-icon class="board-col-icons">delete</mat-icon>
+                                    </mat-card-actions>
+                                </mat-card>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
-
-
+            <!-- URGENT END-->
+            <!-- TO DO START-->
             <div class="board-card-wrapper">
                 <div class="flex-btw-c">
-                    <div class="board-col-headline">To-do</div>
-                    <div>
+                    <div class="board-col-headline pad-l-24">To do</div>
+                    <div class="pad-r-24">
                         <mat-icon class="board-col-icons">add</mat-icon>
                         <mat-icon class="board-col-icons">more_horiz</mat-icon>
                     </div>
                 </div>
-                <div>
-                    <mat-card class="board-card">
-                        <mat-card-header>
-                            <mat-card-title>Shiba Inu</mat-card-title>
-                            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                        </mat-card-header>
-                        <mat-card-content>
-                            <p>This card indeterminates progress bar.</p>
-                            <p class="board-card-date">28 August</p>
-                        </mat-card-content>
-                        <mat-card-actions class="board-col-tools">
-                            <mat-icon class="board-col-icons">edit</mat-icon>
-                            <mat-icon class="board-col-icons">delete</mat-icon>
-                        </mat-card-actions>
-                    </mat-card>
-                    <div class="flex-c-c mr-t-24"><mat-icon class="board-col-icons">add</mat-icon>Add Task</div>
+                <div class="board-col-overflow">
+                    <div [ngClass]="{'board-card-wrapper-empty': todo.length === 0}" cdkDropList #todoList="cdkDropList"
+                        [cdkDropListData]="todo" [cdkDropListConnectedTo]="[urgentList, inProgressList, doneList]"
+                        (cdkDropListDropped)="drop($event)">
+                        <div class="flex-c-c" *ngIf="todo.length === 0">
+                            <mat-icon class="board-col-icons">add</mat-icon>
+                            <div>Add Task</div>
+                        </div>
+                        <div class="board-media-row">
+                            <div *ngFor="let item of todo" cdkDrag>
+                                <mat-card class="board-card" cdkDragPreview>
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.subtitle}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-content>
+                                        <p>{{item.content}}</p>
+                                        <p class="board-card-date">{{item.date}}</p>
+                                    </mat-card-content>
+                                    <mat-card-actions class="board-col-tools">
+                                        <mat-icon class="board-col-icons">edit</mat-icon>
+                                        <mat-icon class="board-col-icons">delete</mat-icon>
+                                    </mat-card-actions>
+                                </mat-card>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
+            <!-- TODO END-->
+            <!-- IN PROGRESS START-->
             <div class="board-card-wrapper">
                 <div class="flex-btw-c">
-                    <div class="board-col-headline">In Progress</div>
-                    <div>
+                    <div class="board-col-headline pad-l-24">In progress</div>
+                    <div class="pad-r-24">
                         <mat-icon class="board-col-icons">add</mat-icon>
                         <mat-icon class="board-col-icons">more_horiz</mat-icon>
                     </div>
                 </div>
-                <div>
-                    <mat-card class="board-card">
-                        <mat-card-header>
-                            <mat-card-title>Shiba Inu</mat-card-title>
-                            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                        </mat-card-header>
-                        <mat-card-content>
-                            <p>This card indeterminates progress bar.</p>
-                            <p class="board-card-date">-</p>
-                        </mat-card-content>
-                        <mat-card-actions class="board-col-tools">
-                            <mat-icon class="board-col-icons">edit</mat-icon>
-                            <mat-icon class="board-col-icons">delete</mat-icon>
-                        </mat-card-actions>
-                    </mat-card>
-                    <div class="flex-c-c mr-t-24"><mat-icon class="board-col-icons">add</mat-icon>Add Task</div>
+                <div class="board-col-overflow">
+                    <div [ngClass]="{'board-card-wrapper-empty': inProgress.length === 0}" cdkDropList
+                        #inProgressList="cdkDropList" [cdkDropListData]="inProgress"
+                        [cdkDropListConnectedTo]="[urgentList, todoList, doneList]" (cdkDropListDropped)="drop($event)">
+                        <div class="flex-c-c" *ngIf="inProgress.length === 0">
+                            <mat-icon class="board-col-icons">add</mat-icon>
+                            <div>Add Task</div>
+                        </div>
+                        <div class="board-media-row">
+                            <div *ngFor="let item of inProgress" cdkDrag>
+                                <mat-card class="board-card" cdkDragPreview>
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.subtitle}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-content>
+                                        <p>{{item.content}}</p>
+                                        <p class="board-card-date">{{item.date}}</p>
+                                    </mat-card-content>
+                                    <mat-card-actions class="board-col-tools">
+                                        <mat-icon class="board-col-icons">edit</mat-icon>
+                                        <mat-icon class="board-col-icons">delete</mat-icon>
+                                    </mat-card-actions>
+                                </mat-card>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
+            <!-- IN PROGRESS END-->
+            <!-- DONE START-->
             <div class="board-card-wrapper">
                 <div class="flex-btw-c">
-                    <div class="board-col-headline">Done</div>
-                    <div>
+                    <div class="board-col-headline pad-l-24">Done</div>
+                    <div class="pad-r-24">
                         <mat-icon class="board-col-icons">add</mat-icon>
                         <mat-icon class="board-col-icons">more_horiz</mat-icon>
                     </div>
                 </div>
-                <div>
-                    <mat-card class="board-card">
-                        <mat-card-header>
-                            <mat-card-title>Shiba Inu</mat-card-title>
-                            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                        </mat-card-header>
-                        <mat-card-content>
-                            <p>This card indeterminates progress bar.</p>
-                            <p class="board-card-date">22 Januar</p>
-                        </mat-card-content>
-                        <mat-card-actions class="board-col-tools">
-                            <mat-icon class="board-col-icons">edit</mat-icon>
-                            <mat-icon class="board-col-icons">delete</mat-icon>
-                        </mat-card-actions>
-                    </mat-card>
-                    <div class="flex-c-c mr-t-24"><mat-icon class="board-col-icons">add</mat-icon>Add Task</div>
+                <div class="board-col-overflow">
+                    <div [ngClass]="{'board-card-wrapper-empty': done.length === 0}" cdkDropList #doneList="cdkDropList"
+                        [cdkDropListData]="done" [cdkDropListConnectedTo]="[urgentList, todoList, inProgressList]"
+                        (cdkDropListDropped)="drop($event)">
+                        <div class="flex-c-c" *ngIf="done.length === 0">
+                            <mat-icon class="board-col-icons">add</mat-icon>
+                            <div>Add Task</div>
+                        </div>
+                    <div class="board-media-row">
+                            <div *ngFor="let item of done" cdkDrag>
+                                <mat-card class="board-card" cdkDragPreview>
+                                    <mat-card-header>
+                                        <mat-card-title>{{item.title}}</mat-card-title>
+                                        <mat-card-subtitle>{{item.subtitle}}</mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-content>
+                                        <p>{{item.content}}</p>
+                                        <p class="board-card-date">{{item.date}}</p>
+                                    </mat-card-content>
+                                    <mat-card-actions class="board-col-tools">
+                                        <mat-icon class="board-col-icons">edit</mat-icon>
+                                        <mat-icon class="board-col-icons">delete</mat-icon>
+                                    </mat-card-actions>
+                                </mat-card>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
-            <div class="example-container">
-                <h2>To do</h2>
-              
-                <div
-                  cdkDropList
-                  #todoList="cdkDropList"
-                  [cdkDropListData]="todo"
-                  [cdkDropListConnectedTo]="[doneList]"
-                  class="example-list"
-                  (cdkDropListDropped)="drop($event)">
-                  @for (item of todo; track item) {
-                    <div class="example-box" cdkDrag>{{item}}</div>
-                  }
-                </div>
-              </div>
-              
-              <div class="example-container">
-                <h2>Done</h2>
-              
-                <div
-                  cdkDropList
-                  #doneList="cdkDropList"
-                  [cdkDropListData]="done"
-                  [cdkDropListConnectedTo]="[todoList]"
-                  class="example-list"
-                  (cdkDropListDropped)="drop($event)">
-                  @for (item of done; track item) {
-                    <div class="example-box" cdkDrag>{{item}}</div>
-                  }
-                </div>
-              </div>
-
+            <!-- DONE END-->
 
         </div>
     </div>
-  
-  </mat-drawer-container>
+
+</mat-drawer-container>
