--- a/kanban-frondend/src/app/costum-styles/default-theme.scss
+++ b/kanban-frondend/src/app/costum-styles/default-theme.scss
@@ -64,6 +64,19 @@ $accent: hsl(232, 72%, 21%);
     transition: all 550ms;
 }
 
+.board-heading{
+    color:$text;
+    transition: all 550ms;
+    & mat-icon{
+        color:$text;
+        cursor: pointer;
+    
+        &:nth-child(2) {
+            margin-left:24px;
+        }
+    }
+}
+
 .board-card{
     background-color: $secondary;
     color: $text;
@@ -73,6 +86,22 @@ $accent: hsl(232, 72%, 21%);
     padding: 8px 8px 16px 8px;
 
     margin-top: 24px;
+    transition: all 550ms;
+}
+
+.board-card-wrapper-empty{
+    background: linear-gradient(180deg, $secondary, $background);
+    border-radius: 20px;
+    & .board-col-icons{
+        color:$text;
+    }
+
+    height:500px;
+    max-height: 600px;
+  
+    padding-top: 16px;
+    margin-top: 24px;
+
     transition: all 550ms;
 }
 
