--- a/kanban-frondend/src/app/components/board/board.component.scss
+++ b/kanban-frondend/src/app/components/board/board.component.scss
@@ -146,6 +146,9 @@ mat-icon{
 .board-card-wrapper-empty{
     background: linear-gradient(180deg, $secondary, $background);
     border-radius: 20px;
+    & .board-col-icons{
+        color:$text;
+    }
 
     height:500px;
     max-height: 600px;
@@ -153,7 +156,7 @@ mat-icon{
     padding-top: 16px;
     margin-top: 24px;
 
-    transition: all 350ms;
+    transition: all 550ms;
 }
 
 .board-card{
@@ -167,21 +170,25 @@ mat-icon{
     margin-top: 24px;
 }
 
+.board-heading{
+    color:$text;
+    transition: all 550ms;
+    & mat-icon{
+        color:$text;
+        cursor: pointer;
+    
+        &:nth-child(2) {
+            margin-left:24px;
+        }
+    }
+}
+
 .board-col-headline{
     font-size: 24px;
 }
 
 .board-card-date{
     color: $link;
-}
-
-.board-col-icons{
-    color:$text;
-    cursor: pointer;
-
-    &:nth-child(2) {
-        margin-left:24px;
-    }
 }
 
 .board-col-tools{
