fix sidenav delay

--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -26,6 +26,8 @@
             </mat-toolbar-row>
         </mat-toolbar>
     </div>
+
+    <!-- BOARD CONTENT START -->
     <div id="mainBoardBG" class="board-bg">
         <div id="boardBG" class="board-wrapper">
             <div class="board-wrapper-col">
@@ -190,11 +192,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- DONE END-->
-
+                </div><!-- DONE END-->
             </div>
         </div>
-    </div>
+    </div><!-- BOARD CONTENT START -->
 
 </mat-drawer-container>
